package com.minionsai.claude.agent.memory;

/**
 * Types of agent memories
 */
public enum MemoryType {
  GENERIC,
  CONVERSATION,
  FACT,
  REFLECTION,
  ERROR,
  DECISION,
  USER_INTERACTION,
  TOOL_USAGE
}
