package com.minionslab.core.memory;

public enum MemoryRole {
    SHORT_TERM,
    VECTOR,
    ENTITY,
    LONG_TERM
} 