package com.minionslab.core.memory;

public enum OperationStatus {
    SUCCESS,
    FAILURE
}
